Alpha 5.1

- Added a particle effect system for visual effects in the world. Effects added include:
    - Rock chipping away when mining
    - Dust cloud when wall is mined away
    - Wood chipping away when cutting down trees
    - Wood chips and leaves when falling tree hits the ground
    - Muddy splats when digging in the ground
    - Leaves being thrown when harvesting crops or removing pests
    - Deciduous trees will have leaves fall away in autumn!
    - Liquids will splash when dumped into containers
    - Wood shavings when working with a sawmill or carpentry
    - Stone chippings from stonemasonry
    - Sparks from blacksmith's forge (look out for fires later!)

Alpha 5.0.1

- Added a display of current number of beds to settler management screen
- Fixed the tutorial, which was having issues with tracking stockpile tiles after the change in Alpha 5
- Hiding unused wood types from bushes in stockpile management
- Removed 2 of 3 mushroom log types and metal blooms from stockpile management - these items should probably not be stored in a stockpile

Alpha 5 - 19th December 2020

- Added a very basic embark screen for entry of settlement name and map seed
- You can now manage multiple saved games via the UI, also overhauled save file format to use compression
- Improved detection of user home directory, this will cause a loss of preferences on Windows machines where My Documents has been moved from C:\Users\...
- Hard-coded "Item groups" have been entirely replaced by moddable "Stockpile groups" which determine how stockpiles and the resources management screens work
- Stockpiles now support filtering by stockpile group, item type and item material, and can also have a priority set
- Twitch integration - twitch streamers can connect their account to have their viewers automatically show up in game!
- You can now rename settlers!
- Floors now overlap underneath walls, so the transparency at the edge of wall tiles makes sense rather than showing a grey border