@@ -51,7 +51,7 @@
   "tilesets/gui.atlas" : -5886709362053868686,
   "tilesets/masks.atlas" : -7267469657370952532,
   "tilesets/terrain.atlas" : -875876309486559378,
-  "translations/collated.csv" : -4973598914406142731,
+  "translations/collated.csv" : -3364014412436360526,
   "translations/languages.json" : 8557385612734997329,
   "ui/cursors/*.png" : -6131032754499221255,
   "ui/fonts/*.ttf" : -7287232856992254877,
