@@ -319,6 +319,9 @@ GUI.OPTIONS.GAMEPLAY.HIDE_TREES_OBSCURING_SETTLERS,Make trees transparent when o
 GUI.OPTIONS.GAMEPLAY.PAUSE_ON_NOTIFICATION,Pause for notifications,,Pause bei Benachrichtungen,Pause pour les notifications,Pausa per le notifiche,Pausa para notificaciones,Pausar para notificações,,,Пауза для уведомлений,Bildirimler için duraklat,Pause for meddelelser,,Paus för meddelanden,,,,通知の一時停止,暂停通知,알림을 위해 일시 중지
 GUI.OPTIONS.GAMEPLAY.TITLE,"Gameplay Options ",,"Spieleinstellungen ","Options de jeu ",Opzioni di gioco,Opciones de juego,Opções de Jogo,Opções de Jogo,,Настройки игры,Oyun Ayarları,Gameplay-muligheder,,Spelalternativ,,,,ゲームプレイオプション,游戏选项,게임플레이 옵션
 GUI.OPTIONS.GAMEPLAY.USE_EDGE_SCROLLING,Scroll when cursor is at the edge of the screen,,"Scrollen, wenn der Mauszeiger am Bildschirmrand ist",Faites défiler lorsque le curseur est sur le bord de l'écran,Scorri quando il cursore si trova sul bordo dello schermo,Desplazarse cuando el cursor está en el borde de la pantalla,Role quando o cursor estiver na borda da tela,,,"Прокрутка, когда курсор находится на краю экрана",İmleç ekranın köşesinde iken orta tuş ile kaydır.,"Rul, når markøren er ved kanten af skærmen",,Rulla när markören är vid kanten av skärmen,,,,カーソルが画面の端にあるときにスクロールする,当光标位于屏幕边缘时滚动,커서가 화면 가장자리에있을 때 스크롤
+GUI.OPTIONS.GRAPHICS.FULLSCREENMODE.BORDERLESS_FULLSCREEN,Borderless,,,,,,,,,,,,,,,,,,,
+GUI.OPTIONS.GRAPHICS.FULLSCREENMODE.EXCLUSIVE_FULLSCREEN,Exclusive fullscreen,,,,,,,,,,,,,,,,,,,
+GUI.OPTIONS.GRAPHICS.FULLSCREENMODE.WINDOWED,Windowed,,,,,,,,,,,,,,,,,,,
 GUI.OPTIONS.GRAPHICS.TITLE,"Graphics Options ",,"Grafikeinstellungen ","Options graphiques ","Opzioni grafiche ","Ajustes de vídeo ","Opções Gráficas ","Opções Gráficas ",,"Настройки графики ",Grafik Ayarları,Grafikindstillinger,,"Grafikinställningar ",,,,[グラフィックスオプション],图形选项,그래픽 옵션
 GUI.OPTIONS.MISC.CRASH_REPORTING_ENABLED,Allow automatic crash reports,,Automatische Absturzberichte erlauben,Autoriser les rapports d'incident automatiques,Consenti rapporti di arresto anomalo automatico,Permitir informes de bloqueos automáticos,Permitir relatórios de falhas automáticos,,,Разрешить автоматические отчеты о сбоях,Otomatik çökme raporlarına izin ver.,Tillad automatiske nedbrudsrapporter,,Tillåt automatiska kraschrapporter,,,,自動クラッシュレポートを許可する,允许自动崩溃报告,자동 충돌 보고서 허용
 GUI.OPTIONS.MISC.HINTS_ENABLED,Show hints and tutorials in-game,,,,,,,,,,Oyun içinde ipucu ve öğreticilere izin ver.,,,,,,,,,
