@@ -1,5 +1,6 @@
 Alpha 5.1
 
+- Borderless windowed or fullscreen support!
 - Added a particle effect system for visual effects in the world. Effects added include:
     - Rock chipping away when mining
     - Dust cloud when wall is mined away
@@ -12,6 +13,7 @@ Alpha 5.1
     - Wood shavings when working with a sawmill or carpentry
     - Stone chippings from stonemasonry
     - Sparks from blacksmith's forge (look out for fires later!)
+- Option to empty items containing liquid onto the ground
 
 Alpha 5.0.1
 
